new comment functionality

--- a/app/assets/templates/questionANDanswer/questionAnswerItem.jst.ejs
+++ b/app/assets/templates/questionANDanswer/questionAnswerItem.jst.ejs
@@ -10,6 +10,12 @@
   <div class="feed answer-body">
     <%= answer.escape('body') %>
   </div>
+  <div class="new-comment-to-answer">
+
+  </div>
+  <div class="comments-to-answer">
+
+  </div>
   <div class="answer-form-footer group">
     <button class="primary-button action-bar"
             data-id="<%= question.escape('id')%>">
