add header, move session and user controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   <% end %>
 
   <% if flash[:errors] %>
-    <%= flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <%= error %>
+    <% end %>
   <% end %>
 
 </body>
