add backbone auth

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,13 +1,13 @@
 <div id="header">
-  <%= render partial: "./layouts/header" %>
+
 </div>
 
-<div class="backdrop">
 
   <div id="main">
     RAILS
   </div>
 
-</div>
-<script>$(QuoraClone.initialize);</script>
+<script>$(document).ready(function(){
+  QuoraClone.initialize();
+});</script>
 <br><br><br><br>
