--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -2,11 +2,36 @@
 
 <% if(QuoraClone.currentUser.isSignedIn()) { %>
 
-  <p>
-    Signed in as:
-    <a href="#users/<%= QuoraClone.currentUser.id %>"><%= QuoraClone.currentUser.escape("first_name") %></a> |
-    <a href="#" id="sign-out-link">Sign Out</a>
-  </p>
+  <nav class="header-nav group">
+    <div class="header header-logo">
+      <a href="#">LOGO</a>
+    </div>
+
+    <div class="header header-search">
+      <input type="text" placeholder="Search">
+    </div>
+
+    <div class="header header-index">
+      <a href="#">HOME</a>
+    </div>
+
+    <div class="header header-write">
+      <a href="#questions">write</a>
+    </div>
+
+    <div class="header header-notifications">
+      <a href="#">notifications</a>
+    </div>
+
+    <div class="header header-profile">
+      <%= QuoraClone.currentUser.escape('first_name') %>
+    </div>
+
+    <div class="header header-ask-question primary-button form-submit">
+      <a href="#questions/new">ASK QUESTION</a>
+    </div>
+
+  </nav>
 
 <% } else { %>
 
