--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -12,22 +12,18 @@
     </div>
 
     <div class="header header-index">
-      <a href="#">HOME</a>
+      <a href="#">Home</a>
     </div>
 
     <div class="header header-write">
-      <a href="#questions">write</a>
-    </div>
-
-    <div class="header header-notifications">
-      <a href="#">notifications</a>
+      <a href="#questions">Write</a>
     </div>
 
     <div class="header header-profile">
       <%= QuoraClone.currentUser.escape('first_name') %>
     </div>
 
-    <div class="header header-ask-question primary-button form-submit">
+    <div class="header header-ask-question">
       <a href="#questions/new">ASK QUESTION</a>
     </div>
 
