--- a/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
+++ b/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
@@ -1,9 +1,10 @@
 <div class="inline-answer">
 
-  <textarea class="answer-form" id="body" name="title" placeholder="Write your answer"><%= answerComment.escape('body') %></textarea>
+  <textarea class="answer-form" id="body" name="title" placeholder="Add a Comment"><%= answerComment.escape('body') %></textarea>
 
   <div class="answer-form-footer group">
       <button class='primary-button form-submit submit' data-id="<%= answer.escape('id') %>">SUBMIT</button>
+      <button class='tertiary-button form-submit cancel'%>">Cancel</button>
   </div>
 
 </div>
