--- a/app/assets/templates/answers/answerNewView.jst.ejs
+++ b/app/assets/templates/answers/answerNewView.jst.ejs
@@ -4,6 +4,7 @@
 
   <div class="answer-form-footer group">
       <button class='primary-button form-submit submit' data-id="<%= question.escape('id') %>">SUBMIT</button>
+      <button class='tertiary-button form-submit cancel' data-id="<%= question.escape('id') %>">Cancel</button>
   </div>
 
 </div>
