--- a/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
+++ b/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
@@ -4,7 +4,7 @@
 
   <div class="answer-form-footer group">
       <button class='primary-button form-submit submit' data-id="<%= answer.escape('id') %>">SUBMIT</button>
-      <button class='tertiary-button form-submit cancel'%>">Cancel</button>
+      <button class='tertiary-button cancel'%>Cancel</button>
   </div>
 
 </div>
