--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -2,19 +2,19 @@
 
 <form>
 
+<div class="form-row">
   <label>
     Email
     <input type="email" name="user[email]">
   </label>
+</div>
 
-  <br>
-
+<div class="form-row">
   <label>
     Password
     <input type="password" name="user[password]">
   </label>
+</div>
 
-  <br>
-
-  <button>Sign In</button>
+  <button class="primary-button">Sign In</button>
 </form>
