--- a/app/assets/templates/shared/newSeshForm.jst.ejs
+++ b/app/assets/templates/shared/newSeshForm.jst.ejs
@@ -1,4 +1,4 @@
-<div class="sign-in-up-wrapper">
+<div class="sign-in-up-wrapper group">
   <div class="sign-up">
   </div>
   <div class="sign-in">
