--- a/app/assets/templates/answers/answerUpvoteWidget.jst.ejs
+++ b/app/assets/templates/answers/answerUpvoteWidget.jst.ejs
@@ -1,5 +1,5 @@
 <button class="upvote-button primary-button action-bar" data-id=<%= answer.get('id') %>>
-  <% if (upvote.isNew()) { %>
+  <% if (!answer.get('has_upvoted')) { %>
     Upvote | <%= answer.get('num_upvotes') %>
   <% } else { %>
     Upvoted | <%= answer.get('num_upvotes') %>
