--- a/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
+++ b/app/assets/templates/answerComments/answerCommentNewView.jst.ejs
@@ -3,8 +3,7 @@
   <textarea class="answer-form" id="body" name="title" placeholder="Add a Comment"><%= answerComment.escape('body') %></textarea>
 
   <div class="answer-form-footer group">
-      <button class='primary-button form-submit submit' data-id="<%= answer.escape('id') %>">SUBMIT</button>
-      <button class='tertiary-button cancel'%>Cancel</button>
+      <button class='primary-button form-submit submit-comment' data-id="<%= answer.escape('id') %>">Comment</button>
   </div>
 
 </div>
