--- a/app/assets/templates/questions/questionIndexItem.jst.ejs
+++ b/app/assets/templates/questions/questionIndexItem.jst.ejs
@@ -1,6 +1,6 @@
 <div class="question-index-item">
   <div class="show-item-description">
-
+    Question Asked • <%= topic.get('subject') %>
   </div>
   <div class="feed question-title"><%= question.escape('title') %></div>
   <% if (question.answers()) { %>
