--- a/app/assets/templates/questions/questionShow.jst.ejs
+++ b/app/assets/templates/questions/questionShow.jst.ejs
@@ -2,9 +2,9 @@
   <div class="show question-title">
     <%= question.escape('title') %>
   </div>
-
+  <div class='new-answer-div'>
     <button class='primary-button action-bar answer-question'>Write Answer</button>
-
+  </div>
   <div class="new-answer-to-question">
 
   </div>
@@ -12,6 +12,5 @@
   <ul class='answers-to-question'>
 
   </ul>
-
 
 </div>
