--- a/app/assets/templates/answers/answerShowView.jst.ejs
+++ b/app/assets/templates/answers/answerShowView.jst.ejs
@@ -17,8 +17,8 @@
 
 
   <div class="comments-to-answer">
-    <div class="new-comment-to-answer">
+    <div class="new-comment-to-answer group">
 
-    </div>  
+    </div>
   </div>
 </div>
