--- a/app/assets/templates/questionANDanswer/questionAnswerItem.jst.ejs
+++ b/app/assets/templates/questionANDanswer/questionAnswerItem.jst.ejs
@@ -1,6 +1,6 @@
 <div class="question-answer-item-wrapper">
     <div class="show-item-description">
-      Question Asked • <%= topic.get('subject') %>
+      Answer written • <%= topic.escape('subject') %>
     </div>
     <div class="feed question-title">
       <a href="#questions/<%= question.escape('id')%>"><%= question.escape('title') %></a>
