--- a/app/assets/templates/topics/topicSelect.jst.ejs
+++ b/app/assets/templates/topics/topicSelect.jst.ejs
@@ -9,7 +9,7 @@
       class="topic-option"
       type="checkbox"
       value="<%= topic.escape('id') %>">
-      <%= topic.get('subject') %>
+      <%= topic.escape('subject') %>
     </div>
   <% }) %>
 </div>
