--- a/app/assets/templates/questions/questionIndexItem.jst.ejs
+++ b/app/assets/templates/questions/questionIndexItem.jst.ejs
@@ -1,21 +1,31 @@
 <div class="question-index-item">
   <div class="show-item-description">
-    Question Asked • <%= topic.get('subject') %>
+    Question Asked • <%= topic.escape('subject') %>
   </div>
-  <div class="feed question-title"><%= question.escape('title') %></div>
+  <a href="/#questions/<%= question.escape('id') %>">
+    <div class="feed question-title">
+      <%= question.escape('title') %>
+    </div>
+  </a>
   <% if (question.answers()) { %>
-    <% numAnswers = question.answers().length === 1 ? 'Answer' : 'Answers' %>
-    <div class="secondary-text"><%= question.answers().length%> <%= numAnswers %></div>
+    <% numAnswers = question.answers().length === 1 ? 'Answer' : 'Answers'%>
+    <a href="/#questions/<%= question.escape('id') %>">
+      <div class="secondary-text">
+        <%= question.answers().length%> <%= numAnswers %>
+      </div>
+    </a>
   <% } %>
-  <div class="new-answer-to-question"></div>
+  <div class="new-answer-to-question">
+
+  </div>
   <div class="answer-form-footer group">
     <button class="primary-button action-bar answer-question"
             data-id="<%= question.escape('id')%>">
             Write Answer
     </button>
-    <button class="secondary-button action-bar answer-question"
+    <!-- <button class="secondary-button action-bar answer-question"
             data-id="<%= question.escape('id')%>">
             Pass
-    </button>
+    </button> -->
   </div>
 </div>
