--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,7 @@ html, body, textarea, div, ul, a, button, h1, h2, h3, h4, h5, h6 {
   text-decoration: inherit;
   vertical-align: inherit;
   box-sizing: inherit;
+  z-index: inherit;
   background: transparent;
 }
 
@@ -184,9 +185,9 @@ div {
 }
 
 .question-title {
-    color: #333;
-    line-height: 1.25;
-    font-weight: bold;
+  color: #333;
+  line-height: 1.25;
+  font-weight: bold;
 }
 
 .show.question-title {
@@ -333,13 +334,25 @@ div {
   border: 1px solid #3a66ad;
 }
 
-.sign-in-up-wrapper button {
-  float: right;
+.topic-select-wrapper {
+  width: 530px;
+  margin: 50px auto;
+  z-index: 1002;
+  position: relative;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 3px;
+  box-shadow: 2px 3px 15px black;
 }
 
-.topic-select-wrapper {
-  width: 540px;
-  margin: 30px auto;
+.topic-select-wrapper h2 {
+  margin: 10px 0 0 0;
+  text-align: center;
+  font-weight: 700;
+}
+
+.topic-select-wrapper h4 {
+  text-align: center;
 }
 
 .topic-wrapper {
@@ -353,8 +366,20 @@ div {
 
 }
 
+.sign-in-up-wrapper button {
+  float: right;
+}
+
 .page-header {
   font-size: 24px;
+  font-family: Georgia,Times,"Times New Roman",serif;
+  display: block;
+  padding: 0 0 20px 0;
+  margin: 0 auto;
+}
+
+.page-subheader {
+  font-size: 16px;
   font-family: Georgia,Times,"Times New Roman",serif;
   display: block;
   padding: 0 0 20px 0;
@@ -395,7 +420,28 @@ li.comment-to-answer {
   display: block;
   width: 420px;
   padding: 8px 20px;
-  margin: auto;
+  margin: 0 auto;
+}
+
+.comment-text {
+  display: block;
+  float: left;
+  padding: 16px 0 0 0;
+}
+
+.delete-comment {
+  color: #ccc;
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  font: serif;
+  padding: 10px;
+  float: right;
+  margin: 0 20px 0 0
+}
+
+.delete-comment:hover {
+  color: #aaa;
 }
 
 .new-comment-to-answer {
@@ -418,4 +464,18 @@ li.comment-to-answer {
 
 .new-comment-to-answer button {
   float: left;
+}
+
+.submit-topics {
+  margin: 20px 70%;
+}
+
+.cover-background {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ccc;
+  opacity: .3;
+  z-index: 1001;
 }
