--- a/app/assets/templates/answers/answerShowView.jst.ejs
+++ b/app/assets/templates/answers/answerShowView.jst.ejs
@@ -11,12 +11,12 @@
   <div class="answer-form-footer group">
     <button class="tertiary-button show-comments"
             data-id="<%= answer.escape('id')%>">
-            Comments
+            Comments | <%= answer.answerComments().length %>
     </button>
   </div>
 
 
-  <div class="comments-to-answer">
+  <div class="comments-to-answer group">
     <div class="new-comment-to-answer group">
 
     </div>
