--- a/app/assets/templates/shared/newSeshForm.jst.ejs
+++ b/app/assets/templates/shared/newSeshForm.jst.ejs
@@ -1,3 +1,11 @@
+<div class="sign-in-logo">
+  Quoraaaaaa
+</div>
+
+<div class="sign-in-subheader">
+  The best answer to some questions.
+</div>
+
 <div class="sign-in-up-wrapper group">
   <div class="sign-up">
   </div>
