--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -1,19 +1,17 @@
-<h2>Sign In</h2>
+<h2>SIGN IN</h2>
 
 <form>
 
-<div class="form-row">
-  <label>
-    Email
-    <input type="email" name="user[email]">
-  </label>
+<div>
+  <div class="form-row sign-in-item group">
+    <input type="email" name="user[email]" placeholder="Email">
+  </div>
 </div>
 
-<div class="form-row">
-  <label>
-    Password
+<div>
+  <div class="form-row sign-in-item group">
     <input type="password" name="user[password]">
-  </label>
+  </div>
 </div>
 
   <button class="primary-button">Sign In</button>
