--- a/app/assets/templates/users/form.jst.ejs
+++ b/app/assets/templates/users/form.jst.ejs
@@ -1,40 +1,39 @@
-<h2>Sign Up</h2>
+<h2>SIGN UP</h2>
 
 <form>
 
-<div class="form-row">
+<div class="form-row group">
   <label>
     First Name
+  </label>
     <input type="text" name="user[first_name]"
            value="<%= user.escape("first_name") %>">
-  </label>
+
 </div>
 
-<div class="form-row">
+<div class="form-row group">
   <label>
     Last Name
+  </label>
     <input type="text" name="user[last_name]"
            value="<%= user.escape("last_name") %>">
-  </label>
+
 </div>
 
-<div class="form-row">
+<div class="form-row group">
   <label>
     Email
+  </label>
     <input type="email" name="user[email]"
            value="<%= user.escape("email") %>">
-  </label>
+
 </div>
 
-<div class="form-row">
+<div class="form-row group">
   <label>
     Password
-    <input type="password" name="user[password]"
-           value="<%= user.escape("password") %>">
   </label>
+    <input type="password" name="user[password]">
 </div>
-
-
-  <button class="primary-button">Create Account</button>
-
+  <button class="primary-button">Sign Up</button>
 </form>
