some word adjustments

--- a/app/assets/templates/shared/newSeshForm.jst.ejs
+++ b/app/assets/templates/shared/newSeshForm.jst.ejs
@@ -1,9 +1,9 @@
 <div class="sign-in-logo">
-  Quoraaaaaa
+  Quoraaaaaaa
 </div>
 
 <div class="sign-in-subheader">
-  The best answer to some questions.
+  Invigorating answers in a charming font.
 </div>
 
 <div class="sign-in-up-wrapper group">
