--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -1,4 +1,4 @@
-<h2>SIGN IN</h2>
+<h2>LOGIN</h2>
 
 <form>
 
@@ -14,5 +14,5 @@
   </div>
 </div>
 
-  <button class="primary-button">Sign In</button>
+  <button class="primary-button">Login</button>
 </form>
