--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -3,7 +3,7 @@
 <div class="header">
   <div class="header-nav group">
 
-      <a href="#">Quora</a>
+      <a href="#">fauxrum</a>
 
       <a href="#"> future home of search bar </a>
 
