--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -10,7 +10,7 @@
 
 <div>
   <div class="form-row sign-in-item group">
-    <input type="password" name="user[password]">
+    <input type="password" name="user[password]" placeholder="Password">
   </div>
 </div>
 
