--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -5,7 +5,9 @@
 
       <a href="#">fauxrum</a>
 
-      <a href="#"> future home of search bar </a>
+      <form class="search">
+        <input type="text" placeholder="Search">
+      </form>
 
       <a href="#">Home</a>
 
