--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,6 +38,10 @@ ul {
   list-style: none;
 }
 
+li {
+  list-style: none;
+}
+
 .group:after {
   content: "";
   display: block;
@@ -116,7 +120,7 @@ div {
 
 .header-nav {
   position: relative;
-  width: 868px;
+  width: 878px;
   margin: 0px auto;
   font-size: 14px;
   font-weight: 500;
@@ -125,11 +129,28 @@ div {
   opacity: 100%;
 }
 
+
 .header-nav > * {
   position: relative;
   float: left;
   display: block;
   padding: 14px 20px 15px 20px;
+}
+
+.header-nav > form > input {
+  outline: 0;
+  position: relative;
+  top: -3px;
+  margin-top: 0;
+  padding: 5px;
+  width: 220px;
+  font-size: 15px;
+  line-height: normal;
+  background: #eee;
+  background-size: 13px 13px;
+  border: 0;
+  border-radius: 2px;
+  box-sizing: border-box;
 }
 
 .header-nav > a:first-child {
@@ -138,6 +159,11 @@ div {
   padding: 6px 20px 9px 20px;
   font-size: 24px;
   font-family: "Le Monde Courrier", baskerville, serif;
+  top: 2px;
+}
+
+.header-nav > div {
+  cursor: default;
 }
 
 .primary-button.header-button {
@@ -568,4 +594,19 @@ li.comment-to-answer {
   background-image: image-url("//qsf.is.quoracdn.net/-2f32a993187981f4.png");
   z-index: 3;
   opacity: .3;
+}
+
+.search-item {
+  margin: 10px auto;
+  width: 570px;
+}
+
+#main > .feed {
+  margin: 20px auto;
+}
+
+.column-header.search {
+  font-size: 24px;
+  position: relative;
+  top: -20px;
 }
