--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -13,8 +13,7 @@
 
       <a href="#questions">Write</a>
 
-      <div class="zone6kingz"><%= QuoraClone.currentUser.escape('first_name') %></div>
-
+      <a href="#topics/new">Follow Topics</a>
 
       <button class="primary-button header-button">Ask Question</button>
 
