--- a/app/assets/templates/topics/feedShow.jst.ejs
+++ b/app/assets/templates/topics/feedShow.jst.ejs
@@ -1,5 +1,5 @@
 <div class="main-wrapper group">
-  <p class="column-header">Top Stories</p>
+  <p class="column-header">Answers to Your Followed Topics</p>
 
   <ul class="topic-list group">
 
