--- a/app/assets/templates/shared/newSeshForm.jst.ejs
+++ b/app/assets/templates/shared/newSeshForm.jst.ejs
@@ -11,5 +11,14 @@
   </div>
   <div class="sign-in">
   </div>
-  <a href="/auth/facebook">Facebook</a>
 </div>
+
+<a href="auth/facebook/">
+  <div class="fb-login group">
+      <div class=fb-logo>
+      </div>
+      <div class="fb-words">
+        Login With Facebook
+      </div>
+  </div>
+</a>
