add more 'inclusions' in users and topics controller

--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -18,9 +18,9 @@
       </div>
 
       <ul class="header-menu">
-        <li><a href="#topics/new"> Follow Topics </a></li>
-        <li> Edit Bio </li>
-        <li id="sign-out-link"> Sign Out </li>
+        <li class="header-menu-item"><a href="#topics/new"> Follow Topics </a></li>
+        <li class="header-menu-item"> Edit Bio </li>
+        <li id="sign-out-link" class="header-menu-item"> Sign Out </li>
       </ul>
 
       <button class="primary-button header-button">Ask Question</button>
