rough user bio link

--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -19,7 +19,7 @@
 
       <ul class="header-menu">
         <li class="header-menu-item"><a href="#topics/new"> Follow Topics </a></li>
-        <li class="header-menu-item"> Edit Bio </li>
+        <li class="header-menu-item"><a href="#user/bio"> Edit Bio</a> </li>
         <li id="sign-out-link" class="header-menu-item"> Sign Out </li>
       </ul>
 
