--- a/app/assets/templates/shared/userBio.jst.ejs
+++ b/app/assets/templates/shared/userBio.jst.ejs
@@ -1,1 +1,3 @@
-<input type="text" value="<%= bio %>">
+<input class="user-bio" type="text" value="<%= bio %>">
+
+<button class="submit-bio">Update Bio</button>
