--- a/app/assets/templates/shared/userBio.jst.ejs
+++ b/app/assets/templates/shared/userBio.jst.ejs
@@ -6,6 +6,7 @@
   <button class="submit-bio">Update Bio</button>
 
   <input type="file" name="user[avatar]" id="input-image">
+  <% debugger %>
   <img src="<%= img %>" class="avatar">
   <button class="attach-image">Upload Image</button>
 
