images for answer items

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -690,3 +690,11 @@ li.comment-to-answer {
   height: 50px;
   border-radius: 50%;
 }
+
+.author-avatar {
+  float: left
+}
+
+.author-info {
+  float: left
+}
