--- a/app/assets/templates/answers/answerSearchItem.jst.ejs
+++ b/app/assets/templates/answers/answerSearchItem.jst.ejs
@@ -8,8 +8,15 @@
 
           <div class="feed answer-author">
             <% biography = !bio ? "No Bio" : bio %>
-            <img src="<%= img %>" class="avatar">
-            <span class="author-name"><%= author.escape('first_name') %> <%= author.escape('last_name') %></span class="author-name"> • <%= biography %>
+            <span class="author-avatar">
+              <img src="<%= img %>" class="avatar">
+            </span>
+            <span class="author-info">
+              <span class="author-name">
+                <%= author.escape('first_name') %> <%= author.escape('last_name') %>
+              </span class="author-name">
+                • <%= biography %>
+            </span>
           </div>
 
           <div class="feed answer-body">
