--- a/app/assets/templates/answers/answerShowView.jst.ejs
+++ b/app/assets/templates/answers/answerShowView.jst.ejs
@@ -1,8 +1,16 @@
 
 <div class="answer-wrapper">
-  <div class="feed answer-author">
+  <div class="feed answer-author group">
     <% biography = !bio ? "No Bio" : bio %>
-    <span class="author-name"><%= author.escape('first_name') %> <%= author.escape('last_name') %></span class="author-name"> • <%= biography %>
+    <span class="author-avatar">
+      <img src="<%= img %>" class="avatar">
+    </span>
+    <span class="author-info">
+      <span class="author-name">
+        <%= author.escape('first_name') %> <%= author.escape('last_name') %>
+      </span class="author-name">
+        • <%= biography %>
+    </span>
   </div>
 
   <div class="feed answer-body">
